lnrpc+rpcserver: add support for passing in private_channels as uint64 array
