# lnrpc/rpc.swagger.json
@@ -2712,6 +2712,14 @@
             "$ref": "#/definitions/lnrpcInvoiceHTLC"
           },
           "description": "/ List of HTLCs paying to this invoice [EXPERIMENTAL]."
+        },
+        "private_channels": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "uint64"
+          },
+          "description": "*\nThe list of private channel ids that will be used as hop hints."
         }
       }
     },
